...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".view.ui.reader.manga.MangaReaderActivity">

        <FrameLayout
            android:id="@+id/root_frame_book_reader"
            style="@style/AppBackground.Reader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:fitsSystemWindows="false" />

...
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:fitsSystemWindows="false"
            layout="@layout/reader_book_tts"/>

        <include
            android:id="@+id/reader_book_container_touch_demonstration"
            layout="@layout/reader_book_touch_demonstration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <include
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/popup_background_size"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/popup_book_configuration_tab"
                    style="@style/PopupTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    app:tabPaddingBottom="0dp"
...
                        android:text="@string/popup_reading_book_tab_item_font" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/popup_book_configuration_item_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_reading_book_tab_item_layout" />

                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/popup_book_configuration_view_pager"
                    android:layout_width="match_parent"
...
