...
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="140dp"
            android:layout_alignParentStart="true"
            android:visibility="gone"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/reader_book_toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/reader_title_margin_negative"
            android:layout_marginEnd="@dimen/reader_title_margin_negative"
            android:background="@android:color/transparent"
            android:paddingBottom="5dp"
...

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar_book_reader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        app:popupTheme="@style/MainToolbarStyle"
                        style="@style/MainToolbarThemeWithShadow"
                        android:contentInsetStart="0dp"
                        android:contentInsetLeft="0dp"
                        app:contentInsetLeft="0dp"
                        app:contentInsetStart="0dp"/>

                    <TextView
                        android:id="@+id/reader_book_toolbar_title"
                        style="@style/ReaderToolbarTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:gravity="center"
                        android:textSize="@dimen/title_medium_size"/>
...
                    android:thumb="@drawable/reader_progress_thumb_big"
                    android:thumbOffset="6dp"
                    custom:dots_drawable_primary="@drawable/ico_progress_primary_dot_big"
                    custom:dots_drawable_secondary="@drawable/ico_progress_secondary_dot_big"/>

                <TextView
                    android:id="@+id/reader_book_toolbar_bottom_author"
                    style="@style/ReaderToolbarTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_medium_size"
                    android:layout_marginEnd="5dp"/>

...
