<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_reader_book_tts"
        android:icon="@drawable/ico_book_tts"
        android:orderInCategory="100"
        android:title="@string/menu_book_reading_tts"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_reader_book_chapter"
        android:icon="@drawable/ico_animated_book_chapter"
        android:orderInCategory="101"
        android:title="@string/menu_book_reading_chapter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_reader_book_search"
        android:icon="@drawable/ico_animated_search"
        android:orderInCategory="102"
        android:title="@string/menu_search"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_reader_book_annotation"
        android:icon="@drawable/ico_animated_book_annotations"
        android:orderInCategory="103"
        android:title="@string/menu_book_reading_annotation"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_reader_book_font_style"
        android:icon="@drawable/ico_animated_book_font_style"
        android:orderInCategory="104"
        android:title="@string/menu_book_reading_font_and_page"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_reader_book_mark_page"
        android:icon="@drawable/ico_animated_book_mark"
        android:orderInCategory="105"
        android:title="@string/menu_book_reading_book_mark"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_reader_book_summary"
        android:icon="@drawable/ico_animated_book_chapter"
        android:orderInCategory="106"
        android:title="@string/menu_reader_summary"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_book_assistant"
        android:icon="@drawable/ico_animated_search"
        android:orderInCategory="107"
        android:title="@string/menu_reader_assistant"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_book_scrolling_mode"
        android:icon="@drawable/ico_reading_mode"
        android:orderInCategory="102"
        android:title="@string/config_book_scrolling_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_reader_book_scrolling_pagination"
                    android:title="@string/config_book_scrolling_pagination" />
                <item
                    android:id="@+id/menu_item_reader_book_scrolling_pagination_right_to_left"
                    android:title="@string/config_book_scrolling_pagination_right_to_left" />
                <item
                    android:id="@+id/menu_item_reader_book_scrolling_pagination_vertical"
                    android:title="@string/config_book_scrolling_pagination_vertical" />
                <item
                    android:id="@+id/menu_item_reader_book_scrolling_infinity_scrolling"
                    android:title="@string/config_book_scrolling_infinity_scrolling" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_reader_book_pagination_type"
        android:icon="@drawable/ico_reading_mode"
        android:orderInCategory="103"
        android:title="@string/config_book_pagination_type"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_reader_book_pagination_default"
                    android:title="@string/config_book_pagination_default" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_page_curl"
                    android:title="@string/config_book_pagination_page_curl" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_page_curl_3d"
                    android:title="@string/config_book_pagination_page_curl_3d" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_stack"
                    android:title="@string/config_book_pagination_page_stack" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_zoom"
                    android:title="@string/config_book_pagination_page_zoom" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_fade"
                    android:title="@string/config_book_pagination_page_fade" />
                <item
                    android:id="@+id/menu_item_reader_book_pagination_depth"
                    android:title="@string/config_book_pagination_page_depth" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_reader_book_view_touch_screen"
        android:icon="@drawable/ico_view_touch_screen"
        android:orderInCategory="104"
        android:title="@string/menu_book_reading_view_touch"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_book_config_touch_screen"
        android:icon="@drawable/ico_view_touch_screen"
        android:orderInCategory="105"
        android:title="@string/menu_book_reading_config_touch"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_book_tracker"
        android:icon="@drawable/ico_tracker"
        android:orderInCategory="108"
        android:title="@string/tracker_title"
        app:showAsAction="never"/>

</menu>