...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_layout_margin_small"
            app:icon="@drawable/ico_animated_margin_small"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/popup_book_layout_margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_margin_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_margin_medium"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_layout_alignment_left"
            app:icon="@drawable/ico_animated_align_left"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@+id/popup_book_layout_alignment_justify"
            app:layout_constraintRight_toLeftOf="@+id/popup_book_layout_alignment_center"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_alignment_center"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_justify"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_reading_touch_screen"
            style="@style/Button.LabelStart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/popup_reading_layout_reading_view_touch"
            android:layout_margin="@dimen/margin"
            app:icon="@drawable/ico_config_touch_screen"
...
